# aai-agent

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  _protocol.ts  deno.json  eslint.config.mjs  fly.toml  main.ts  mod.ts  package.json  pyproject.toml  server.py
.husky/: pre-commit
_utils/: fetch_json.ts  fetch_json_test.ts  logger.ts  logger_test.ts
browser/: audio.ts  client.ts  core.ts  errors.ts  session.ts  types.ts
cli/: _bundler.ts  _discover.ts  _output.ts  _output_test.ts  _zod_shim.ts  build.ts  build_test.ts  cli.ts  cli_test.ts  deploy.ts  deploy_test.ts  dev.ts  dev_test.ts
examples/: Dockerfile  docker-entrypoint.sh  fly.toml  index.html
platform/: builtin-tools.ts  builtin_tools.ts  builtin_tools_test.ts  bundler.ts  config.ts  errors.ts  errors_test.ts  eslint.config.js  fly.toml  html.ts  kv-store.ts  llm.ts  middleware.ts  mod.ts  orchestrator.ts  package-lock.json  package.json  protocol.ts  protocol_test.ts  server.ts  server_test.ts  session.ts  session_factory.ts  session_test.ts  stt.ts  stt_test.ts  tool-executor.ts  tool_executor.ts  tool_executor_test.ts  tsconfig.json  tts.ts  tts_test.ts  turn_handler.ts  turn_handler_test.ts  types.ts  types_test.ts  vitest.config.ts  worker-entry.ts  worker-pool.ts  worker_entry.ts  (+5 more)
scripts/: _bundler.ts  _discover.ts  _output.ts  _zod-shim.ts  build-client.ts  cli.ts  deploy.ts  dev.ts  production.ts  serve-agent.ts
sdk/: agent.ts  agent_test.ts  builtin-tools.ts  config.ts  deno-ext.ts  errors.ts  fetch_json.ts  llm.ts  logger.ts  mod.ts  protocol.ts  server.ts  session.ts  shared-protocol.ts  shared_protocol.ts  stt.ts  tool-executor.ts  tool_executor.ts  tts.ts  types.ts  voice-cleaner.ts  worker-entry.ts  ws-handler.ts
server/: _test_utils.ts  _tool_test_utils.ts  agent.ts  agent_test.ts  agent_types.ts  builtin-tools.ts  builtin_tools.ts  builtin_tools_test.ts  config.ts  config_test.ts  constants.ts  errors.ts  html.ts  kv_store.ts  llm.ts  llm_test.ts  logger.ts  middleware.ts  mod.ts  orchestrator.ts  orchestrator_test.ts  protocol.ts  protocol_test.ts  server.ts  session.ts  session_factory.ts  session_test.ts  shared-protocol.ts  stt.ts  stt_test.ts  tool-executor.ts  tool.ts  tool_executor.ts  tool_executor_test.ts  tts.ts  tts_test.ts  turn_handler.ts  turn_handler_test.ts  types.ts  voice-cleaner.ts  (+6 more)
tests/: conftest.py  helpers.py  test_agent.py  test_cli.py  test_fastapi.py  test_manager.py  test_stt.py  test_tools.py  test_tts.py  test_types.py
ui/: _audio_core.ts  _dom_setup.ts  _dom_shim.ts  _test_utils.ts  audio.ts  audio_test.ts  client.tsx  components.tsx  components_test.tsx  context.tsx  context_test.tsx  core.ts  errors.ts  errors_test.ts  html.ts  mod.ts  mount.tsx  mount_test.tsx  reconnect.ts  reconnect_test.ts  session.ts  session_test.ts  signals.ts  signals.tsx  signals_test.ts  theme.ts  (+4 more)
(+224 files in other folders)
