[project]
name = "aai-agent"
version = "0.1.0"
description = "Voice agent SDK powered by AssemblyAI STT, Rime TTS, and smolagents"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anyio>=4.0",
    "httpx>=0.28.1",
    "smolagents[litellm]>=1.24",
    "typer>=0.9.0",
]

[project.scripts]
aai-agent = "aai_agent.cli:app"

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0"]
# Extra deps for running the example web assistant
examples = [
    "aai-agent[fastapi]",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
    "wikipedia-api>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aai_agent"]
