[project]
name = "aai-agent"
version = "0.1.0"
description = "Voice agent SDK powered by AssemblyAI STT, Rime TTS, and smolagents"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anyio>=4.0",
    "cachetools>=5.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "num2words>=0.5",
    "smolagents[litellm]>=1.24",
    "typer>=0.9.0",
]

[project.scripts]
aai-agent = "aai_agent.cli:app"

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0", "itsdangerous>=2.0", "uvicorn[standard]>=0.41.0"]
test = [
    "aai-agent[fastapi]",
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28.1",
]

dev = [
    "pyright>=1.1.408",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/aai_agent"]
