[project]
name = "aai-agent"
version = "0.1.0"
description = "Voice agent SDK powered by AssemblyAI STT and pydantic-ai"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anyio>=4.0",
    "cachetools>=5.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pydantic-ai>=0.2",
    "markdownify>=0.14",
    "logfire>=4.0",
    "python-dotenv>=1.2.1",
    "inflect>=7.0",
    "fastapi>=0.115.0",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.41.0",
    "websockets>=13.0",
]

[project.scripts]
aai-agent = "aai_agent.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
]

dev = [
    "pyright>=1.1.408",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/aai_agent"]
